Cleanup a bit and remove topk 10